# ha-energy-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
addon/: repository.yaml
addon/ha-energy-dashboard/: Dockerfile  config.yaml  run.sh
backend/: config.py  db.py  main.py  pricing.py  views.py
backend/routers/: costs.py  flows.py  grid.py  heatpump.py  hp_status.py  meta.py  overview.py  solar.py  strategy.py
dashboard/: Dockerfile  build.yaml  config.yaml  run.sh
docs/: git_bash_navigatie.md
frontend/: costs.html  flows.html  grid.html  grid.js  heatpump.html  hpstatus.html  index.html  manifest.json  now.html  shared-insights.js  shared.js  solar.html  strategy.html
scripts/: explore_lts.py  smoke_db.py  test_heatpump.py  test_pricing.py  test_view.py
tests/: test_pricing.py
