[project]
name = "ha-energy-dashboard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pandas>=2.2",
    "cachetools>=5.3",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.3",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pandas>=2.2",
    "cachetools>=5.3",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "tzdata>=2024.1",
]

[tool.setuptools]
packages = ["backend"]